fixed navbar flicker on reload

--- a/style.css
+++ b/style.css
@@ -197,6 +197,8 @@ html[data-auth="in"] #navUserWrap{
     align-items: center;
     justify-self: center;
     width: 100%;
+    min-height: 46px;
+    display: flex;
 }
 
 .navbar .nav-search{
